Fix desktop shortcut

--- a/cxviz feed.desktop
+++ b/cxviz feed.desktop
@@ -2,6 +2,6 @@
 Type=Application
 Name=cxviz feed
 Comment=cxviz feed
-Exec=/home/augusto/Documents/cxviz/cxviz feed
-Icon=/home/augusto/Documents/cxviz/icon.png
+Exec=cxviz feed
+Icon=icon.png
 Terminal=false
